NetBSD Problem Report #47038

From dholland@netbsd.org  Fri Oct  5 10:58:40 2012
Return-Path: <dholland@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id F0AA763B8A7
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  5 Oct 2012 10:58:39 +0000 (UTC)
Message-Id: <20121005105839.E1B5514A20D@mail.netbsd.org>
Date: Fri,  5 Oct 2012 10:58:39 +0000 (UTC)
From: dholland@netbsd.org
Reply-To: dholland@netbsd.org
To: gnats-bugs@gnats.NetBSD.org
Subject: installing from a USB stick image is unnecessarily confusing
X-Send-Pr-Version: 3.95

>Number:         47038
>Category:       install
>Synopsis:       installing from a USB stick image is unnecessarily confusing
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    install-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Oct 05 11:00:00 +0000 2012
>Closed-Date:    Fri Oct 26 16:51:56 +0000 2012
>Last-Modified:  Sun Nov 18 22:10:03 +0000 2012
>Originator:     David A. Holland
>Release:        NetBSD 6.0_RC2
>Organization:
>Environment:
System: [stock RC2 from releng]
Architecture: i386
Machine: i386
>Description:

If you install from one of the USB stick images that has all the
install sets already on it, there's no obvious option to pick to tell
it where the install sets are. "CD" doesn't work; neither does asking
it to mount your USB stick, because it's already mounted. It turns out
that if you choose an already mounted directory and use the default
path, it works, but this isn't at all obvious from the menus.

>How-To-Repeat:

as above.

>Fix:

Shouldn't install media that come with installation sets choose their
own installation sets by default? It seems that if one is going to
take the trouble to download and dd the enormous image, one shouldn't
subsequently have to think about where the sets are.

Or maybe there should just be a menu entry for "the USB stick you
booted from".

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: install/47038: installing from a USB stick image is unnecessarily confusing
Date: Fri, 5 Oct 2012 13:53:14 +0200

 On Fri, Oct 05, 2012 at 11:00:01AM +0000, dholland@netbsd.org wrote:
 > Shouldn't install media that come with installation sets choose their
 > own installation sets by default?

 Yes, I think both on CDs and USB images we should pass an option to sysinst
 making it skip the distmedium menu and go straight to get_via_cdrom() (with
 included magic to find the cd drive used) or get_via_localdir() in the usb
 case.

 Martin

From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Re: install/47038: installing from a USB stick image is unnecessarily
	 confusing
Date: Fri, 5 Oct 2012 22:57:24 +0900

 > It turns out
 > that if you choose an already mounted directory and use the default
 > path, it works,

 Isn't it enought to document it, at least for 6.0? (PR install/46753)

 ---
 Izumi Tsutsui

From: David Laight <david@l8s.co.uk>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: install/47038: installing from a USB stick image is unnecessarily confusing
Date: Fri, 5 Oct 2012 18:16:29 +0100

 On Fri, Oct 05, 2012 at 11:55:02AM +0000, Martin Husemann wrote:
 > The following reply was made to PR install/47038; it has been noted by GNATS.
 > 
 > From: Martin Husemann <martin@duskware.de>
 > To: gnats-bugs@NetBSD.org
 > Cc: 
 > Subject: Re: install/47038: installing from a USB stick image is unnecessarily confusing
 > Date: Fri, 5 Oct 2012 13:53:14 +0200
 > 
 >  On Fri, Oct 05, 2012 at 11:00:01AM +0000, dholland@netbsd.org wrote:
 >  > Shouldn't install media that come with installation sets choose their
 >  > own installation sets by default?
 >  
 >  Yes, I think both on CDs and USB images we should pass an option to sysinst
 >  making it skip the distmedium menu and go straight to get_via_cdrom() (with
 >  included magic to find the cd drive used) or get_via_localdir() in the usb
 >  case.

 It would be better to show the menu, but have the normal default
 item already selected.
 Then you can boot sysinst of CDROM, but download the sets via ftp (etc).

 	David

 -- 
 David Laight: david@l8s.co.uk

From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: install-manager@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org, dholland@netbsd.org
Subject: re: install/47038: installing from a USB stick image is unnecessarily confusing
Date: Sat, 06 Oct 2012 09:10:42 +1000

 >  On Fri, Oct 05, 2012 at 11:00:01AM +0000, dholland@netbsd.org wrote:
 >  > Shouldn't install media that come with installation sets choose their
 >  > own installation sets by default?
 >  
 >  Yes, I think both on CDs and USB images we should pass an option to sysinst
 >  making it skip the distmedium menu and go straight to get_via_cdrom() (with
 >  included magic to find the cd drive used) or get_via_localdir() in the usb
 >  case.

 does this mean i wouldn't be able to choose some other media?
 i use this feature fairly often -- boot some random cdrom, but
 use sets from some other place (usually ftp or nfs.)

 i was thinking it would make the default be right, so you could
 just hit return and start.


 .mrg.

From: Martin Husemann <martin@duskware.de>
To: matthew green <mrg@eterna.com.au>
Cc: gnats-bugs@NetBSD.org
Subject: Re: install/47038: installing from a USB stick image is unnecessarily confusing
Date: Sun, 7 Oct 2012 00:28:13 +0200

 On Sat, Oct 06, 2012 at 09:10:42AM +1000, matthew green wrote:
 > does this mean i wouldn't be able to choose some other media?
 > i use this feature fairly often -- boot some random cdrom, but
 > use sets from some other place (usually ftp or nfs.)

 I am not sure about this - while I use it myself as well, there is a certain
 (but not very strong) relation between sysinst, the install environment and
 the sets.

 On the other hand, from a typical user perspective, the whole install process
 should need as few questions/interactions as possible.

 So: let's create an option menu to go via full menu/manual source selection,
 but make the default install "just do the right thing" (i.e. use the sets
 that come with the CD/usb image).

 Martin

From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: install/47038: installing from a USB stick image is
 unnecessarily confusing
Date: Tue, 9 Oct 2012 16:18:52 +0000

 On Sat, Oct 06, 2012 at 10:30:04PM +0000, Martin Husemann wrote:
  >  > does this mean i wouldn't be able to choose some other media?
  >  > i use this feature fairly often -- boot some random cdrom, but
  >  > use sets from some other place (usually ftp or nfs.)
  >  
  > I am not sure about this - while I use it myself as well, there is
  > a certain (but not very strong) relation between sysinst, the
  > install environment and the sets.
  >  
  > On the other hand, from a typical user perspective, the whole
  > install process should need as few questions/interactions as
  > possible.
  >  
  > So: let's create an option menu to go via full menu/manual source
  > selection, but make the default install "just do the right thing"
  > (i.e. use the sets that come with the CD/usb image).

 That sounds like the right approach.

 As for whether documentation is enough... no, I don't think so. Most
 people who have a couple clues won't bother reading the install
 instructions in enough detail to notice, and in a lot of environments
 by the time you're sitting in the installer wondering wtf to do next
 it's a bit late to go back and look at the instructions.

 -- 
 David A. Holland
 dholland@netbsd.org

From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47038 CVS commit: src/distrib/utils/sysinst
Date: Thu, 25 Oct 2012 15:05:24 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Thu Oct 25 15:05:23 UTC 2012

 Modified Files:
 	src/distrib/utils/sysinst: msg.mi.de msg.mi.en msg.mi.es msg.mi.fr
 	    msg.mi.pl util.c
 	src/distrib/utils/sysinst/arch/amd64: Makefile
 	src/distrib/utils/sysinst/arch/i386: Makefile

 Log Message:
 Make the default choice of "Install from" menu to use the sets
 in the default file system (assuming which come with the CD/USB image)
 and skip distmedium menu if the root file system is not md(4).
 Also change "CD-ROM / DVD" menu option accordingly on ports which
 have install images.  PR/47038

 XXX: still no responsible maintainer of non-en translations


 To generate a diff of this commit:
 cvs rdiff -u -r1.70 -r1.71 src/distrib/utils/sysinst/msg.mi.de
 cvs rdiff -u -r1.175 -r1.176 src/distrib/utils/sysinst/msg.mi.en
 cvs rdiff -u -r1.47 -r1.48 src/distrib/utils/sysinst/msg.mi.es
 cvs rdiff -u -r1.129 -r1.130 src/distrib/utils/sysinst/msg.mi.fr
 cvs rdiff -u -r1.86 -r1.87 src/distrib/utils/sysinst/msg.mi.pl
 cvs rdiff -u -r1.179 -r1.180 src/distrib/utils/sysinst/util.c
 cvs rdiff -u -r1.7 -r1.8 src/distrib/utils/sysinst/arch/amd64/Makefile
 cvs rdiff -u -r1.17 -r1.18 src/distrib/utils/sysinst/arch/i386/Makefile

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sat, 27 Oct 2012 01:51:56 +0900
State-Changed-Why:
fixed


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47038 CVS commit: [netbsd-6] src/distrib/utils/sysinst
Date: Sun, 18 Nov 2012 22:04:44 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sun Nov 18 22:04:44 UTC 2012

 Modified Files:
 	src/distrib/utils/sysinst [netbsd-6]: msg.mi.de msg.mi.en msg.mi.es
 	    msg.mi.fr msg.mi.pl util.c
 	src/distrib/utils/sysinst/arch/amd64 [netbsd-6]: Makefile
 	src/distrib/utils/sysinst/arch/i386 [netbsd-6]: Makefile

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #649):
 	distrib/utils/sysinst/msg.mi.es: revision 1.48
 	distrib/utils/sysinst/arch/i386/Makefile: revision 1.18
 	distrib/utils/sysinst/msg.mi.en: revision 1.176
 	distrib/utils/sysinst/arch/amd64/Makefile: revision 1.8
 	distrib/utils/sysinst/msg.mi.de: revision 1.71
 	distrib/utils/sysinst/msg.mi.fr: revision 1.130
 	distrib/utils/sysinst/util.c: revision 1.180
 	distrib/utils/sysinst/msg.mi.pl: revision 1.87
 Make the default choice of "Install from" menu to use the sets
 in the default file system (assuming which come with the CD/USB image)
 and skip distmedium menu if the root file system is not md(4).
 Also change "CD-ROM / DVD" menu option accordingly on ports which
 have install images.  PR/47038
 XXX: still no responsible maintainer of non-en translations


 To generate a diff of this commit:
 cvs rdiff -u -r1.61.2.3 -r1.61.2.4 src/distrib/utils/sysinst/msg.mi.de
 cvs rdiff -u -r1.169.2.3 -r1.169.2.4 src/distrib/utils/sysinst/msg.mi.en
 cvs rdiff -u -r1.39.2.4 -r1.39.2.5 src/distrib/utils/sysinst/msg.mi.es
 cvs rdiff -u -r1.119.2.3 -r1.119.2.4 src/distrib/utils/sysinst/msg.mi.fr
 cvs rdiff -u -r1.78.2.3 -r1.78.2.4 src/distrib/utils/sysinst/msg.mi.pl
 cvs rdiff -u -r1.173.2.1 -r1.173.2.2 src/distrib/utils/sysinst/util.c
 cvs rdiff -u -r1.7 -r1.7.54.1 src/distrib/utils/sysinst/arch/amd64/Makefile
 cvs rdiff -u -r1.17 -r1.17.54.1 src/distrib/utils/sysinst/arch/i386/Makefile

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47038 CVS commit: [netbsd-6-0] src/distrib/utils/sysinst
Date: Sun, 18 Nov 2012 22:05:27 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sun Nov 18 22:05:27 UTC 2012

 Modified Files:
 	src/distrib/utils/sysinst [netbsd-6-0]: msg.mi.de msg.mi.en msg.mi.es
 	    msg.mi.fr msg.mi.pl util.c
 	src/distrib/utils/sysinst/arch/amd64 [netbsd-6-0]: Makefile
 	src/distrib/utils/sysinst/arch/i386 [netbsd-6-0]: Makefile

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #649):
 	distrib/utils/sysinst/msg.mi.es: revision 1.48
 	distrib/utils/sysinst/arch/i386/Makefile: revision 1.18
 	distrib/utils/sysinst/msg.mi.en: revision 1.176
 	distrib/utils/sysinst/arch/amd64/Makefile: revision 1.8
 	distrib/utils/sysinst/msg.mi.de: revision 1.71
 	distrib/utils/sysinst/msg.mi.fr: revision 1.130
 	distrib/utils/sysinst/util.c: revision 1.180
 	distrib/utils/sysinst/msg.mi.pl: revision 1.87
 Make the default choice of "Install from" menu to use the sets
 in the default file system (assuming which come with the CD/USB image)
 and skip distmedium menu if the root file system is not md(4).
 Also change "CD-ROM / DVD" menu option accordingly on ports which
 have install images.  PR/47038
 XXX: still no responsible maintainer of non-en translations


 To generate a diff of this commit:
 cvs rdiff -u -r1.61.2.3 -r1.61.2.3.2.1 src/distrib/utils/sysinst/msg.mi.de
 cvs rdiff -u -r1.169.2.3 -r1.169.2.3.2.1 src/distrib/utils/sysinst/msg.mi.en
 cvs rdiff -u -r1.39.2.4 -r1.39.2.4.2.1 src/distrib/utils/sysinst/msg.mi.es
 cvs rdiff -u -r1.119.2.3 -r1.119.2.3.2.1 src/distrib/utils/sysinst/msg.mi.fr
 cvs rdiff -u -r1.78.2.3 -r1.78.2.3.2.1 src/distrib/utils/sysinst/msg.mi.pl
 cvs rdiff -u -r1.173.2.1 -r1.173.2.1.4.1 src/distrib/utils/sysinst/util.c
 cvs rdiff -u -r1.7 -r1.7.60.1 src/distrib/utils/sysinst/arch/amd64/Makefile
 cvs rdiff -u -r1.17 -r1.17.60.1 src/distrib/utils/sysinst/arch/i386/Makefile

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.