Pull up following revision(s) (requested by tsutsui in ticket #649): 	distrib/utils/sysinst/msg.mi.es: revision 1.48 	distrib/utils/sysinst/arch/i386/Makefile: revision 1.18 	distrib/utils/sysinst/msg.mi.en: revision 1.176 	distrib/utils/sysinst/arch/amd64/Makefile: revision 1.8 	distrib/utils/sysinst/msg.mi.de: revision 1.71 	distrib/utils/sysinst/msg.mi.fr: revision 1.130 	distrib/utils/sysinst/util.c: revision 1.180 	distrib/utils/sysinst/msg.mi.pl: revision 1.87 Make the default choice of "Install from" menu to use the sets in the default file system (assuming which come with the CD/USB image) and skip distmedium menu if the root file system is not md(4). Also change "CD-ROM / DVD" menu option accordingly on ports which have install images.  PR/47038 XXX: still no responsible maintainer of non-en translations